# NSM-DEBUG_MCP

./: .gitignore  LICENSE  NSM-DEBUG_MCP.example.yaml  NSM-DEBUG_MCP_R1.example.yaml  NSM-DEBUG_MCP_R2.example.yaml  NSM-DEBUG_MCP_R3.example.yaml  README.md  pyproject.toml  run_nsm_debug_mcp.cmd  run_nsm_debug_mcp.ps1
markdown/: NSM-DEBUG_MCP_Guide_EN.md  NSM-DEBUG_MCP_Guide_ZH.md
src/nsm_debug_mcp/: __init__.py  server.py
tools/: run_r1_ctrlc_ctrlq_factory_reset.py  selftest_list_tools.py
